--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/NhaCungCap/MainContentNCC.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/NhaCungCap/MainContentNCC.form
@@ -92,6 +92,11 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JTextField" name="jTextTimKiem">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="12" style="1"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
@@ -256,6 +261,11 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextDiaChi">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="12" style="1"/>
+                </Property>
+              </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextDiaChiActionPerformed"/>
               </Events>
