--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/NhaCungCap/TableNhaCC.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/NhaCungCap/TableNhaCC.form
@@ -27,6 +27,11 @@
   </Layout>
   <SubComponents>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
+      </Properties>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
