--- a/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/TaiKhoanComponent/FromaddQuyen.form
+++ b/Smartphone-sales-manager/src/Smartphone_sales_management/UI/Component/TaiKhoanComponent/FromaddQuyen.form
@@ -79,14 +79,14 @@
                   <EmptySpace min="-2" max="-2" attributes="0"/>
                   <Component id="cbbMatk" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                  <Component id="jLabel12" pref="21" max="32767" attributes="0"/>
+                  <Component id="jLabel12" max="32767" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="cbbMaQ" alignment="3" max="32767" attributes="0"/>
                       <Component id="txtTenQuyen" alignment="3" pref="28" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
-                  <Component id="jButton4" pref="34" max="32767" attributes="0"/>
+                  <Component id="jButton4" pref="31" max="32767" attributes="0"/>
                   <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -111,6 +111,9 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="cbbMatk">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="1"/>
+            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
                 <StringItem index="0" value="Item 1"/>
@@ -137,6 +140,9 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="cbbMaQ">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="1"/>
+            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="4">
                 <StringItem index="0" value="Item 1"/>
